fixing tabs on mobile

--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ html {
 
     .tab {
         position: absolute;
-        left: 5%;
+        left: 50%;
         top: 0%;
         transform: translateX(-50%);
         font-size: 10px;
